syntax = "proto3";

package orwell;

enum PacketType {
  Client_Heartbeat = 0;
  Client_Error = 1;
  Client_Information = 2;
  Client_Hello = 3;
  Client_PreLogin = 4;
  Client_Register = 5;
  Client_Login = 6;
  Client_Message = 7;
  Client_ChangeColor = 8;
  Client_Afk = 9;

  Server_Heartbeat = 10000;
  Server_Error = 10001;
  Server_Information = 10002;
  Server_Hello = 10003;
  Server_PreLogin = 10004;
  Server_RegisterResponse = 10005;
  Server_LoginResponse = 10006;
  Server_ClientInfo = 10007;
  Server_BroadcastMessage = 10008;
  Server_HistoryMessage = 10009;
  Server_ChangeColorResponse = 10010;
  Server_OrwellRatchetStep = 10011;
}

enum ClientStatus {
  Online = 0;
  Offline = 1;
  Afk = 2;
}


message ClientInfo {
  string id = 1;
  string name = 2;
  uint32 color = 3;
  bytes kyber_pk = 4;
  ClientStatus status = 5;
}

enum MessageType {
  Text = 0;
  Login = 1;
  Logout = 2;
  ChangeColor = 3;
  Me = 4;
  EnterAfk = 5;
  LeftAfk = 6;
  Image = 7;
}

message Profile {
  string name = 1;
  bytes kyber_pk = 2;
  bytes kyber_sk = 3;
  bytes dilithium_pk = 4;
  bytes dilithium_sk = 5;
}

message OrwellRatchetPacket {
  bytes kyber_pk = 1;
  uint64 send_counter = 2;
  uint64 recv_counter = 3;
  bytes data = 4;
}

message OrwellPacket {
  uint64 timestamp = 1;
  bytes salt = 2;
  PacketType packet_type = 3;
  bytes data = 4;
}

message OrwellSignedPacket {
  OrwellPacket data = 1;
  bytes sign = 2;
}

message ClientHeartbeat {
}

message ClientError {
  string error = 1;
}

message ClientInformation {
  string information = 1;
}

message ClientHello {
  bytes pk = 1;
}

message ClientHello2 {
  bytes ciphertext = 1;
}

message ClientPreLogin {
  bytes dilithium_pk = 1;
  uint64 version = 2;
}

message ClientRegister {
  string name = 1;
  bytes kyber_pk = 2;
  bytes dilithium_pk = 3;
}

message ClientLogin {
  bytes token_sign = 1;
}

message Key {
  string receiver_id = 1;
  bytes ciphertext = 2;
}

message ClientMessage {
  repeated Key keys = 1;
  bytes data = 2;
}

message ClientChangeColor {
  int32 color = 1;
}

message ClientAfk {

}

message ServerHeartbeat {
  
}

message ServerError {
  string error = 1;
}

message ServerInformation {
}


message ServerHello {
  bytes ciphertext = 1;
  bytes pk = 2;
  bytes dilithium_pk = 3;
}

message ServerPreLogin {
  bool registered = 1;
  bool can_register = 2;
  bytes token = 3;
  bool version_mismatch = 4;
}

message ServerRegisterResponse {
  bool success = 1;
  int32 color = 2;
  string message = 3;
}

message ServerLoginResponse {
  bool success = 1;
  string message = 2;
}

message ServerClientInfo {
  repeated ClientInfo data = 1;
}

message ServerBroadcastMessage {
  string sender_id = 1;
  string sender_name = 2;
  int32 color = 3;
  Key key = 4;
  bytes data = 5;
  uint64 timestamp = 6;
}

message ServerBroadcastClientLogin {
  string sender_id = 1;
  string sender_name = 2;
  int32 color = 3;
}

message ServerBroadcastClientLogout {
  string sender_id = 1;
  string sender_name = 2;
  int32 color = 3;
}

message ServerHistoryMessage {
  repeated ServerBroadcastMessage data = 1;
}

message ServerChangeColorResponse {
  bool success = 1;
  int32 color = 2;
  string message = 3;
}

message ServerBroadcastChangeColor {
  string id = 1;
  string name = 2;
  int32 old_color = 3;
  int32 new_color = 4;
}

message OrwellRatchetStep {
  bytes ct = 1;
}